fix: correct z-index for review criteria on Swipe Review Tool

--- a/web/css/modal.css
+++ b/web/css/modal.css
@@ -19,6 +19,7 @@
   left: 0;
   background-color: rgba(0, 0, 0, .4);
   overflow: scroll;
+  z-index: 50;
 }
 
 .close-modal {
